<resources>
    <string name="app_name">魅听</string>
    <string name="website">https://github.com/xieRuoTian/CharmPlayer</string>

    <string name="menu_nav_skin">更换皮肤</string>
    <string name="menu_nav_clock">定时停止</string>
    <string name="menu_nav_sound">音 效</string>
    <string name="menu_nav_setting">设 置</string>
    <string name="menu_nav_about">关于我们</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="default_music_title">魅听，听见好音乐</string>
    <string name="default_music_art">在这里倾听世界的声音</string>

    <string name="local_music">本地音乐</string>
    <string name="scan_music">扫描歌曲</string>
    <string name="music_list">歌单</string>
    <string name="artist">歌手</string>
    <string name="music_fond">我喜欢</string>

    <string name="scan_title">扫描歌曲</string>
    <string name="scan_mode_full">完全扫描</string>
    <string name="scan_mode_diy">自定义扫描</string>
    <string name="select_file_confirm">开始扫描</string>
    <string name="deep_option">未找到你想要的歌曲？\n试试深度扫描</string>

    <string name="local_title">本地音乐</string>
    <string name="stop">停止</string>
    <string name="edit_list">编辑</string>
    <string name="play_full_list">播放所有歌曲</string>

    <string name="music_option_play_later">下一首播放</string>
    <string name="music_option_fond">我喜欢</string>
    <string name="music_option_keep">添加到歌单</string>
    <string name="music_option_infor">歌曲信息</string>
    <string name="music_option_delete">删除</string>
</resources>
