<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_skin"
            android:icon="@drawable/ic_skin"
            android:title="@string/menu_nav_skin" />
        <item
            android:id="@+id/nav_clock"
            android:icon="@drawable/ic_clock"
            android:title="@string/menu_nav_clock" />
        <item
            android:id="@+id/nav_sound"
            android:icon="@drawable/ic_sound_effect"
            android:title="@string/menu_nav_sound" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_setting"
            android:title="@string/menu_nav_setting" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about_me"
            android:title="@string/menu_nav_about" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
